--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_fragment_inscription">FragmentInscription</string>
     <string name="title_activity_contacts">ContactsActivity</string>
+    <string name="title_activity_fragment_login">FragmentLogin</string>
 
 </resources>
