Ajout de la page de "succès" et de la condition pour y accéder.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_fragment_inscription">FragmentInscription</string>
     <string name="title_activity_contacts">ContactsActivity</string>
     <string name="title_activity_fragment_login">FragmentLogin</string>
+    <string name="title_activity_success">SuccessActivity</string>
 
 </resources>
